# bevy_robin_render

./: Cargo.toml
crates/robin_core_pipeline/: Cargo.toml
crates/robin_core_pipeline/src/: lib.rs  schedule.rs
crates/robin_core_pipeline/src/blit/: mod.rs
crates/robin_core_pipeline/src/core_2d/: main_opaque_pass_2d_node.rs  main_transparent_pass_2d_node.rs  mod.rs
crates/robin_core_pipeline/src/fullscreen_vertex_shader/: mod.rs
crates/robin_core_pipeline/src/tonemapping/: mod.rs  node.rs
crates/robin_core_pipeline/src/tonemapping/luts/: info.txt
crates/robin_core_pipeline/src/upscaling/: mod.rs  node.rs
crates/robin_encase_derive/: Cargo.toml  README.md
crates/robin_encase_derive/src/: lib.rs
crates/robin_graphics/: Cargo.toml
crates/robin_graphics/src/: lib.rs  schedule.rs
crates/robin_graphics/src/batching/: gpu_preprocessing.rs  mod.rs  no_gpu_preprocessing.rs
crates/robin_graphics/src/core_2d/: main_opaque_pass_2d_node.rs  mod.rs
crates/robin_graphics/src/frame_graph/: mod.rs  resource_node.rs  resource_table.rs
crates/robin_graphics/src/frame_graph/graph/: impls.rs  mod.rs  resource_board.rs
crates/robin_graphics/src/frame_graph/graph/pass_node_builder/: pass_builder.rs  render_pass_builder.rs
crates/robin_graphics/src/frame_graph/graph/pass_node_builder/parameter/: draw_indexed_indirect_parameter.rs  draw_indirect_parameter.rs  insert_debug_marker_parameter.rs  mod.rs  multi_draw_indexed_indirect_count_parameter.rs  multi_draw_indexed_indirect_parameter.rs  multi_draw_indirect_count_parameter.rs  pop_debug_group_parameter.rs  push_debug_group_parameter.rs  set_blend_constant_parameter.rs  set_immediates_parameter.rs  set_stencil_reference_parameter.rs  set_viewport_parameter.rs
crates/robin_graphics/src/frame_graph/pass/: mod.rs
crates/robin_graphics/src/frame_graph/pass/render_pass/: context.rs  mod.rs
crates/robin_graphics/src/frame_graph/transient_resource/: bind_group.rs  cache.rs  mod.rs
crates/robin_graphics/src/fullscreen_vertex_shader/: mod.rs
crates/robin_graphics/src/render_phase/: draw.rs  draw_state.rs  mod.rs
crates/robin_render/: Cargo.toml  README.md
crates/robin_render/macros/: Cargo.toml
crates/robin_render/macros/src/: as_bind_group.rs  extract_component.rs  lib.rs  specializer.rs
crates/robin_render/src/: camera.rs  color_operations.wgsl  erased_render_asset.rs  error_handler.rs  extract_component.rs  extract_plugin.rs  extract_resource.rs  globals.rs  gpu_component_array_buffer.rs  gpu_readback.rs  lib.rs  maths.wgsl  render_asset.rs  renderer.rs  settings.rs  slab_allocator.rs  storage.rs  sync_world.rs  uniform.rs
crates/robin_render/src/batching/: gpu_preprocessing.rs  no_gpu_preprocessing.rs
crates/robin_render/src/diagnostic/: erased_render_asset_diagnostic_plugin.rs  mesh_allocator_diagnostic_plugin.rs  mod.rs  render_asset_diagnostic_plugin.rs  tracy_gpu.rs
crates/robin_render/src/frame_graph/: index.rs  index_handle.rs  mod.rs  pass_node.rs  pipeline_container.rs  resource_node.rs  resource_table.rs  texture_view.rs
crates/robin_render/src/frame_graph/graph/: device_pass.rs  mod.rs  resource_material.rs
crates/robin_render/src/frame_graph/graph/pass_node_builder/: encoder_builder.rs  mod.rs  pass_builder.rs  render_pass_builder.rs
crates/robin_render/src/frame_graph/graph/pass_node_builder/parameter/: mod.rs
crates/robin_render/src/frame_graph/pass/: mod.rs
crates/robin_render/src/frame_graph/pass/encoder/: mod.rs
crates/robin_render/src/frame_graph/pass/parameter/: begin_pipeline_statistics_query_parameter.rs  clear_texture_parameter.rs  end_pipeline_statistics_query_parameter.rs  insert_debug_marker_parameter.rs  mod.rs  multi_draw_indirect_parameter.rs  pop_debug_group_parameter.rs  push_debug_group_parameter.rs  set_bind_group_parameter.rs  set_blend_constant_parameter.rs  set_immediates_parameter.rs  set_viewport_parameter.rs  write_timestamp_parameter.rs
crates/robin_render/src/frame_graph/pass/render_pass/: context.rs  mod.rs
crates/robin_render/src/frame_graph/transient_resource/: bind_group.rs  buffer.rs  cache.rs  mod.rs  texture.rs  texture_view.rs
crates/robin_render/src/frame_graph/transient_resource/bind_group/: handle.rs  mod.rs
crates/robin_render/src/mesh/: allocator.rs  mod.rs  morph.rs
crates/robin_render/src/occlusion_culling/: mesh_preprocess_types.wgsl  mod.rs
crates/robin_render/src/render_graph/: mod.rs  plugin.rs
crates/robin_render/src/render_phase/: draw.rs  draw_state.rs  mod.rs
crates/robin_render/src/render_resource/: batched_uniform_buffer.rs  bind_group.rs  buffer.rs  buffer_vec.rs  gpu_array_buffer.rs  mod.rs  pipeline_cache.rs  pipeline_specializer.rs  render_device.rs  sparse_buffer_vec.rs  specializer.rs  storage_buffer.rs  texture.rs  uniform_buffer.rs
crates/robin_render/src/renderer/: mod.rs  raw_vulkan_init.rs  render_context.rs  render_device.rs  render_resources.rs
crates/robin_render/src/texture/: gpu_image.rs  manual_texture_view.rs  mod.rs  texture_attachment.rs  texture_cache.rs
crates/robin_render/src/view/: mod.rs
crates/robin_render/src/view/visibility/: mod.rs  range.rs
crates/robin_render/src/view/window/: mod.rs  screenshot.rs
crates/robin_sprite_render/: Cargo.toml  README.md
crates/robin_sprite_render/src/: lib.rs
crates/robin_sprite_render/src/mesh2d/: color_material.rs  material.rs  mesh.rs  wireframe2d.rs
crates/robin_sprite_render/src/render/: mod.rs
crates/robin_sprite_render/src/sprite_mesh/: sprite_material.rs
crates/robin_sprite_render/src/tilemap_chunk/: tilemap_chunk_material.rs
examples/: demo.rs
examples/2d/: 2d_shapes.rs
src/: lib.rs
