[package]
name = "bevy_robin_render"
version = "0.1.0"
edition = "2024"

[workspace]
members = ['.', './crates/robin_render']

[workspace.dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_derive = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

[dependencies]
