[package]
name = "bevy_robin_render"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    '.',
    'crates/robin_render',
    "crates/robin_render/macros",
    "crates/robin_core_pipeline",
    "crates/robin_sprite_render",
]

[workspace.dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_derive = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
    "std",
    "serialize",
] }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_macro_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_encase_derive = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_camera = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_material = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_color = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_diagnostic = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_material_macros = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_mesh = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_shader = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_light = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_sprite = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[dependencies]
