[package]
name = "bevy_robin_render"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/robin_render", ".", "crates/robin_core_pipeline"]

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

# Unfortunately, cargo does not currently support overriding workspace lints
# inside a particular crate. See https://github.com/rust-lang/cargo/issues/13157
#
# We require an override for cases like `std_instead_of_core`, which are intended
# for the library contributors and not for how users should consume Bevy.
# To ensure examples aren't subject to these lints, below is a duplication of the
# workspace lints, with the "overrides" applied.
#
# [lints]
# workspace = true

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
bevy_derive = { git = "https://github.com/bevyengine/bevy.git" }
bevy_diagnostic = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_encase_derive = { git = "https://github.com/bevyengine/bevy.git" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git" }
bevy_material = { git = "https://github.com/bevyengine/bevy.git" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git" }
bevy_material_macros = { git = "https://github.com/bevyengine/bevy.git" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git" }
bevy_mesh = { git = "https://github.com/bevyengine/bevy.git" }
bevy_camera = { git = "https://github.com/bevyengine/bevy.git" }
bevy_shader = { git = "https://github.com/bevyengine/bevy.git" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }

[dependencies]
robin_render = { path = "crates/robin_render" }
robin_core_pipeline = { path = "crates/robin_core_pipeline" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", features = ['debug']}
