[package]
name = "robin_core_pipeline"
version = "0.1.0"
edition = "2024"

[features]
trace = []
webgl = []
webgpu = []
tonemapping_luts = ["bevy_image/ktx2", "bevy_image/zstd"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_asset = { workspace = true }
bevy_ecs = { workspace = true }
bevy_light = { workspace = true }
bevy_shader = { workspace = true }
bevy_camera = { workspace = true }
bevy_log = { workspace = true }
bevy_platform = { workspace = true }
bevy_image = { workspace = true }
bevy_utils = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true }

robin_render = { path = "../robin_render" }

indexmap = "2"
bitflags = "2.3"


[lints]
workspace = true
