[package]
name = "robin_graphics"
version = "0.1.0"
edition = "2024"

[features]
trace = []


[dependencies]
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }

bevy_render = { workspace = true }
bevy_app = { workspace = true }
bevy_camera = { workspace = true }
bevy_asset = { workspace = true }
bevy_ecs = { workspace = true }
bevy_shader = { workspace = true }
bevy_log = { workspace = true }
bevy_platform= { workspace = true }
