[package]
name = "robin_graphics"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    "--cfg",
    "docsrs_dep",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]

[lints]
workspace = true

[features]
trace = []
detailed_trace = []

[dev-dependencies]
proptest = "1"

[dependencies]
bevy_render = { workspace = true }
bevy_app = { workspace = true }
bevy_camera = { workspace = true }
bevy_asset = { workspace = true }
bevy_ecs = { workspace = true }
bevy_shader = { workspace = true }
bevy_log = { workspace = true }
bevy_platform = { workspace = true }
bevy_derive = { workspace = true }
bevy_utils = { workspace = true }
bevy_material = { workspace = true }
bevy_material_macros = { workspace = true }
bevy_color = { workspace = true }
bevy_math = { workspace = true }
bevy_encase_derive = { workspace = true }
bevy_tasks = { workspace = true }
bevy_image= { workspace = true }

wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
encase = "0.12"
fixedbitset = { version = "0.5" }
indexmap = { version = "2" }
nonmax = "0.5"
smallvec = { version = "1", default-features = false, features = ["const_new"] }
thiserror = { version = "1.0" }
variadics_please = "1.1"
bytemuck = { version = "1.5", features = ["derive", "must_cast"] }
radsort = "0.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
