[package]
name = "robin_render"
version = "0.1.0"
edition = "2024"
description = "Provides rendering functionality for Bevy Engine"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
# Bevy users should _never_ turn this feature on.
#
# Bevy/wgpu developers can turn this feature on to test a newer version of wgpu without needing to also update naga_oil.
#
# When turning this feature on, you can add the following to bevy/Cargo.toml (not this file), and then run `cargo update`:
# [patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
# wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "..." }
decoupled_naga = ["bevy_shader/decoupled_naga"]

multi_threaded = ["bevy_tasks/multi_threaded", "bevy_transform/multi_threaded"]

morph = ["bevy_mesh/morph"]

shader_format_spirv = ["bevy_shader/shader_format_spirv", "wgpu/spirv"]

# Enable SPIR-V shader passthrough
spirv_shader_passthrough = ["wgpu/spirv"]

# Statically linked DXC shader compiler for DirectX 12
# TODO: When wgpu switches to DirectX 12 instead of Vulkan by default on windows, make this a default feature
statically-linked-dxc = ["wgpu/static-dxc"]

# Forces the wgpu instance to be initialized using the raw Vulkan HAL, enabling additional configuration
raw_vulkan_init = ["wgpu/vulkan"]

trace = ["profiling"]
tracing-tracy = ["dep:tracy-client"]
ci_limits = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
vulkan-portability = ["wgpu/vulkan-portability"]
gles = ["wgpu/gles"]
detailed_trace = []
# Pre-populate buffer labels with buffer types for debugging.
type_label_buffers = []
# Enables collecting extra information for debugging.
debug = ["type_label_buffers", "bevy_utils/debug"]
## Adds serialization support through `serde`.
serialize = ["bevy_mesh/serialize"]

reflect_auto_register = ["bevy_app/reflect_auto_register"]
reflect_functions = ["bevy_app/reflect_functions"]

[dependencies]
# bevy
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_asset = { workspace = true }
bevy_color = { git = "https://github.com/bevyengine/bevy.git", features = ["serialize", "wgpu-types"] }
bevy_derive = { workspace = true }
bevy_diagnostic = { workspace = true }
bevy_ecs = { workspace = true }
bevy_encase_derive = { workspace = true }
bevy_math = { workspace = true }
bevy_material = { workspace = true }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
bevy_log = { workspace = true }
bevy_material_macros = { workspace = true }
bevy_time = { workspace = true }
bevy_transform = { workspace = true }
bevy_window = { workspace = true }
bevy_utils = { workspace = true }
bevy_tasks = { workspace = true }
bevy_image = { workspace = true }
bevy_mesh = { workspace = true }
bevy_camera = { workspace = true }
bevy_shader = { workspace = true }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
  "std",
  "serialize",
] }

bevy_render_macros = { path = "./macros" }


# rendering
image = { version = "0.25.2", default-features = false }

# misc
# `fragile-send-sync-non-atomic-wasm` feature means we can't use Wasm threads for rendering
# It is enabled for now to avoid having to do a significant overhaul of the renderer just for wasm.
# When the 'atomics' feature is enabled `fragile-send-sync-non-atomic` does nothing
# and Bevy instead wraps `wgpu` types to verify they are not used off their origin thread.
wgpu = { version = "29.0.1", default-features = false, features = [
  "wgsl",
  "dx12",
  "metal",
  "vulkan",
  "naga-ir",
  "fragile-send-sync-non-atomic-wasm",
] }
wgpu-types = { version = "29.0.1", default-features = false }
naga = { version = "29.0.1", features = ["wgsl-in"] }
bytemuck = { version = "1.5", features = ["derive", "must_cast"] }
downcast-rs = { version = "2", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["from"] }
encase = "0.12"
glam = { version = "0.32.0", default-features = false, features = [
  "std",
  "encase",
] }
# For wgpu profiling using tracing. Use `RUST_LOG=info` to also capture the wgpu spans.
profiling = { version = "1", features = [
  "profile-with-tracing",
], optional = true }
async-channel = "2.3.0"
nonmax = "0.5"
smallvec = { version = "1", default-features = false, features = ["const_new"] }
offset-allocator = "0.2"
variadics_please = "1.1"
tracy-client = { version = "0.18.3", optional = true }
indexmap = { version = "2" }
bitflags = "2"
itertools = "0.14"
weak-table = "0.3"

[dev-dependencies]
proptest = "1"
proptest-derive = "0.2"

[target.'cfg(all(target_arch = "wasm32", target_feature = "atomics"))'.dependencies]
send_wrapper = { version = "0.6.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.83"
web-sys = { version = "0.3.67", features = [
  'Blob',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Url',
  'Window',
] }
wasm-bindgen = "0.2"
# TODO: Assuming all wasm builds are for the browser. Require `no_std` support to break assumption.
bevy_app = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
  "web",
] }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
  "web",
] }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
  "web",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true
