[package]
name = "robin_render_macros"
version = "0.0.1"
edition = "2024"
description = "Derive implementations for robin_render"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true
